--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,9 +8,9 @@
   "home_app_help_text": "<p>Shifts are numbered 1 through 7: Wednesday = Shift 1, Tuesday = Shift 2 etc.</p>\n\n<p>Every payroll period has 7 shifts. If you do not work a shift, that shift still exists and you will have \"0\" hours for that shift.</p>\n\n<p>A green checkbox will be displayed at the end of the shifts above when the hours in the work reports you have submitted for that shift are equal to the number of hours you should have worked for that shift.</p>\n\n<p>If submitted hours are not equal to shift hours, that is not necessarily bad.The most important number(s) are the number of hours you worked and the total hours for the pay period (Wednesday through Tuesday of shifts 1through 7).</p>\n\n<p>The number of hours submitted is the total of all shift hour submitted: this number is what will be used to calculate the hours in your paycheck.</p>\n\n<p>Payroll Hours are the hours calculated from your hours submitted. This is thenumber of hours you should be paid for in your paycheck. However, payroll hours displayed here are UNVERIFIED hours.</p>\n\n<p>If you made a mistake and sent <b>too many hours</b>, then do not expect to see all of those hours on your paycheck.</p>\n\n<p>If you have submitted <b>too few hours</b>, it is your responsibility to correct them by submitting the appropriate work reports. <b>You will not be paid for hours not submitted (hours not reported).</b></p>\n\n<p>Too few hours do not trigger a flag.</p>\n\n<p>If you submit too many hours, an exception for that shift will be marked with a red flag.</p>\n\n<p>It is <b>your</b> responsibility to make sure you document all hours worked. The hours you see on this screen will be the hours you are paid unless the hours are flagged (red flag).</p>",
   "home_hours_submitted_for_payroll": "Hours Submitted for Payroll",
   "home_hours_of": "hours of",
-  "home_hours_submitted_for_shift": "hours submitted for this shift",
-  "home_hours_submitted_for_payroll_period": "Hours submitted for this payroll period",
-  "home_payroll_hours_submitted": "Payroll hours submitted for this payroll period",
+  "home_hours_submitted_for_shift": "shift hours submitted",
+  "home_hours_submitted_for_payroll_period": "Hours Submitted",
+  "home_payroll_hours_submitted": "Payroll Hours",
   "confirm": "Confirm",
   "delete_report": "Delete this report?",
   "delete": "Delete",
