--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -6,11 +6,11 @@
   "shift_select_title": "Elegir cambio",
   "tech_settings_title": "Usuario",
   "home_app_help_text": "<p>Los turnos se numeran de 1 a 7: Miércoles = Turno 1, Martes = Turno 2, etc.</p>\n\n<p>Cada período de nómina tiene 7 turnos. Si usted no trabaja un turno, ese turno todavía existe y usted tendrá \"0\" horas para ese turno.</p>\n\n<p>Una casilla de verificación verde se mostrará al final de los turnos cuando las horas enviadas para ese turno son iguales al número de horas que debería haber trabajado para ese turno.</p>\n\n<p>Si las horas presentadas no son iguales a las horas de turno, eso no es necesariamente malo. Los números más importantes son el número de horas trabajadas y el número total de horas para el período de pago (de miércoles a martes de turnos de 1 a 7).</p>\n\n<p>El total horas declaradas en sus reportes se utilizará para calcular las horas en su cheque de pago.</p>\n\n<p>Horas de pago son calculadas a partir de aver sido enviadas. El número de horas sometidas seran las horas que se pagaran en su cheque. Sin embargo,las horas de nómina que se muestran aquí NO SON CONFIRMADAS.</p>\n\n<p>Si usted cometió un error y envió demasiadas horas, entonces no espere ver todas esas horas en su cheque de pago.</p>\n\n<p>Si ha sometido <b>menos horas</b>, es <b>su</b> responsabilidad corregirlas enviando los reportes de trabajo apropiados. <b>No se le pagará por horas no sometidas (las horas no reportadas).</b></p>\n\n<p>Menos horas no activan una bandera.</p>\n\n<p>Demasiadas horas activarán un bandera roja de error.</p>\n\n<p>Es <b>su</b> responsabilidad asegurarse de documentar todas las horas trabajadas. Las horas que ve en esta pantalla serán las horas que le pagen, a menos las horas que estén marcadas como una excepción (con una bandera roja).</p>",
-  "home_hours_submitted_for_payroll": "Horas sometidas para la nómina",
+  "home_hours_submitted_for_payroll": "Horas Sometidas para la Nómina",
   "home_hours_of": "horas de",
-  "home_hours_submitted_for_shift": "horas sometidas para este turno",
-  "home_hours_submitted_for_payroll_period": "Horas sometidas para este período de nómina",
-  "home_payroll_hours_submitted": "Horas de nómina para este período de nómina",
+  "home_hours_submitted_for_shift": "horas sometidas de turno",
+  "home_hours_submitted_for_payroll_period": "Horas Sometidas",
+  "home_payroll_hours_submitted": "Horas de Nómina",
   "confirm": "Confirmar",
   "delete_report": "¿Eliminar este reporte?",
   "delete": "Borrar",
@@ -48,7 +48,7 @@
   "shift": "Turno",
   "hours": "horas",
   "of": "de",
-  "repair_time": "Tiempo de reparación",
+  "repair_time": "Hrs. de Reparación",
   "unit_number": "No. Unidad",
   "work_order_number": "No. de orden de trabajo",
   "job_notes": "Notas de trabajo",
