--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -69,7 +69,7 @@
   "tech_settings_last_name": "Apellido",
   "tech_settings_client": "Cliente",
   "tech_settings_location": "Ubicación",
-  "tech_settings_location_id": "ID de ubicación",
+  "tech_settings_location_id": "ID de Ubicación",
   "tech_settings_auxiliary_location": "Ubicación Auxiliar",
   "tech_settings_shift": "Turno",
   "tech_settings_shift_length": "Longitud de Turno",
