otra ves otra ves

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -50,8 +50,8 @@
   "of": "de",
   "repair_time": "Hrs. de Reparación",
   "unit_number": "No. Unidad",
-  "work_order_number": "No. de orden de trabajo",
-  "job_notes": "Notas de trabajo",
+  "work_order_number": "No. de Orden de Trabajo",
+  "job_notes": "Notas de Trabajo",
   "report_submit_error": "Error al enviar el reporte. Vuelve a intentarlo.",
   "payroll_week": "Nómina",
   "select_shift": "Elija el turno",
