Update for non-work Reports and whatnot

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,7 +16,6 @@
   "delete": "Delete",
   "date": "Date",
   "reports": "reports",
-  "unit": "Unit #",
   "username_or_password_error": "Username or password incorrect!",
   "username": "Username",
   "password": "Password",
@@ -96,5 +95,23 @@
   "message_from": "Sender",
   "message_subject": "Subject",
   "message_done": "Done",
-  "messages_no_messages": "No messages available"
+  "messages_no_messages": "No messages available",
+  "spinner_saving_report": "Saving report...",
+  "error_saving_report_message": "Error saving work report. Please try again later.",
+  "report_type": "Report Type",
+  "work_report": "Work Report",
+  "training": "Training",
+  "travel": "Travel",
+  "standby": "Standby",
+  "standby_hb_duncan": "Standby: HB Duncan",
+  "sick": "Sick",
+  "vacation": "Vacation",
+  "travel_hours": "Travel Hours",
+  "training_hours": "Training Hours",
+  "safety": "Safety",
+  "pec": "PEC",
+  "forklift": "Forklift",
+  "overhead_crane": "Overhead Crane",
+  "spinner_retrieving_reports_other": "Fetching Miscellaneous Reports...",
+  "work_site": "Work Site"
 }
