--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -82,7 +82,7 @@
   "language": "Idioma",
   "confirm_exit_title": "Salir de la aplicación",
   "confirm_exit_message": "¿Seguro que quieres salir de la aplicación?",
-  "spinner_retrieving_reports": "Obtener Reportes…",
+  "spinner_retrieving_reports": "Obtener Reportes de Trabajo…",
   "spinner_deleting_report": "Eliminar informe...",
   "error_deleting_report_message": "Error al eliminar el informe. Por favor, inténtelo de nuevo más tarde.",
   "error_server_connect_message": "No se pudo conectar al servidor. Por favor, inténtelo de nuevo más tarde.",
@@ -96,5 +96,23 @@
   "message_from": "Remitente",
   "message_subject": "Tema",
   "message_done": "Hecho",
-  "messages_no_messages": "No hay mensajes disponibles"
+  "messages_no_messages": "No hay mensajes disponibles",
+  "spinner_saving_report": "Guardando el Informe...",
+  "error_saving_report_message": "Error saving work report. Please try again later.",
+  "report_type": "Tipo de informe",
+  "work_report": "Reporte de trabajo",
+  "training": "Formación",
+  "travel": "Viajar",
+  "standby": "Colocarse",
+  "standby_hb_duncan": "Colocarse: HB Duncan",
+  "sick": "Enfermos",
+  "vacation": "Vacaciones",
+  "travel_hours": "Horas de Viaje",
+  "training_hours": "Horas de Formación",
+  "safety": "Seguridad",
+  "pec": "PEC",
+  "forklift": "Máquina Elevadora",
+  "overhead_crane": "Grúa Aérea",
+  "spinner_retrieving_reports_other": "Obtener Reportes Varios...",
+  "work_site": "Sitio de Trabajo"
 }
