--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -124,5 +124,6 @@
   "success": "Success",
   "could_not_read_phone_info": "Could not read phone make and model. In your comment, please tell us what kind of phone you have.",
   "comment": "Comment",
-  "send_comment": "Send Comment"
+  "send_comment": "Send Comment",
+  "spinner_app_loading": "App Loading..."
 }
