--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -83,11 +83,11 @@
   "confirm_exit_title": "Salir de la aplicación",
   "confirm_exit_message": "¿Seguro que quieres salir de la aplicación?",
   "spinner_retrieving_reports": "Obtener Reportes de Trabajo…",
-  "spinner_deleting_report": "Eliminar informe...",
-  "error_deleting_report_message": "Error al eliminar el informe. Por favor, inténtelo de nuevo más tarde.",
+  "spinner_deleting_report": "Eliminar reporte...",
+  "error_deleting_report_message": "Error al eliminar el reporte. Por favor, inténtelo de nuevo más tarde.",
   "error_server_connect_message": "No se pudo conectar al servidor. Por favor, inténtelo de nuevo más tarde.",
   "error_fetching_reports_title": "Error de Conexión",
-  "error_fetching_reports_message": "No se pudo conectar al servidor para recuperar informes. Por favor, inténtelo de nuevo más tarde.",
+  "error_fetching_reports_message": "No se pudo conectar al servidor para recuperar reportes. Por favor, inténtelo de nuevo más tarde.",
   "hours_header": "Horas",
   "payroll_period": "Período de Nómina",
   "pay_period": "Período de Pago",
@@ -97,9 +97,9 @@
   "message_subject": "Tema",
   "message_done": "Hecho",
   "messages_no_messages": "No hay mensajes disponibles",
-  "spinner_saving_report": "Guardando el Informe...",
+  "spinner_saving_report": "Guardando el Reporte...",
   "error_saving_report_message": "Error saving work report. Please try again later.",
-  "report_type": "Tipo de informe",
+  "report_type": "Tipo de Reporte",
   "work_report": "Reporte de trabajo",
   "training": "Formación",
   "travel": "Viajar",
@@ -107,6 +107,7 @@
   "standby_hb_duncan": "Colocarse: HB Duncan",
   "sick": "Enfermos",
   "vacation": "Vacaciones",
+  "holiday": "Vacación Pagada",
   "travel_hours": "Horas de Viaje",
   "training_hours": "Horas de Formación",
   "safety": "Seguridad",
@@ -126,5 +127,14 @@
   "could_not_read_phone_info": "No se pudo leer la marca y modelo del teléfono. En su comentario, por favor díganos qué tipo de teléfono tiene.",
   "comment": "Comentario",
   "send_comment": "Enviar Comentario",
-  "spinner_app_loading": "Cargando la Aplicación"
+  "spinner_app_loading": "Cargando la Aplicación",
+  "all_day": "Todo el Dia",
+  "standby_hours": "Horas de Colocarse",
+  "standby_hb_duncan_hours": "Horas de Colocarse: HB Duncan",
+  "sick_hours": "Horas de Enfermedad",
+  "vacation_hours": "Horas de Vacaciones",
+  "holiday_hours": "Horas de Vacacion Pagada",
+  "app_settings": "Ajustes de Aplicacion",
+  "sounds": "Sonidos",
+  "attempt_to_change_existing_report_type": "No se puede cambiar el tipo de un reporte existente. Elimine este reporte y cree un nuevo reporte."
 }
