--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -103,8 +103,8 @@
   "work_report": "Reporte de trabajo",
   "training": "Formación",
   "travel": "Viajar",
-  "standby": "Colocarse",
-  "standby_hb_duncan": "Colocarse: HB Duncan",
+  "standby": "Espera",
+  "standby_hb_duncan": "Espera: HB Duncan",
   "sick": "Enfermos",
   "vacation": "Vacaciones",
   "holiday": "Vacación Pagada",
@@ -129,12 +129,18 @@
   "send_comment": "Enviar Comentario",
   "spinner_app_loading": "Cargando la Aplicación",
   "all_day": "Todo el Dia",
-  "standby_hours": "Horas de Colocarse",
-  "standby_hb_duncan_hours": "Horas de Colocarse: HB Duncan",
+  "standby_hours": "Horas de Espera",
+  "standby_hb_duncan_hours": "Horas de Espera: HB Duncan",
   "sick_hours": "Horas de Enfermedad",
   "vacation_hours": "Horas de Vacaciones",
   "holiday_hours": "Horas de Vacacion Pagada",
   "app_settings": "Ajustes de Aplicacion",
   "sounds": "Sonidos",
-  "attempt_to_change_existing_report_type": "No se puede cambiar el tipo de un reporte existente. Elimine este reporte y cree un nuevo reporte."
+  "attempt_to_change_existing_report_type": "No se puede cambiar el tipo de un reporte existente. Elimine este reporte y cree un nuevo reporte.",
+  "key_training": "Formación",
+  "key_travel": "Viajar",
+  "key_training_and_travel": "Entrenamiento y Viajes",
+  "key_standby_duncan": "Espera por Duncan",
+  "key_sick_day_or_hours": "Día/Horas de Enfermedad",
+  "key_holiday": "Vacación Pagada"
 }
