Converting to filtered replication and persisting home page payroll period

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -141,5 +141,6 @@
   "key_training_and_travel": "Training and Travel",
   "key_standby_duncan": "Standby for Duncan",
   "key_sick_day_or_hours": "Sick Day/Hrs",
-  "key_holiday": "Holiday"
+  "key_holiday": "Holiday",
+  "twenty_rules": "Twenty Rules"
 }
