--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -142,5 +142,6 @@
   "key_training_and_travel": "Entrenamiento y Viajes",
   "key_standby_duncan": "Espera por Duncan",
   "key_sick_day_or_hours": "Día/Horas de Enfermedad",
-  "key_holiday": "Vacación Pagada"
+  "key_holiday": "Vacación Pagada",
+  "twenty_rules": "Veinte Reglas"
 }
