--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -157,5 +157,7 @@
   "standby_hb_duncan_wrong_location": "Your location is not set to Halliburton Duncan. Please set your location in the User Profile tab below (tap on %s below).",
   "duplicate_standby_report": "You have an existing Standby Report for this shift. Only one Standby report per shift is allowed. You can edit or delete the existing report on the Report History tab (tap %s below).",
   "standby_report_xor_work_report_existing_standby": "You have an existing Standby Report for this shift. You cannot add a Work Report for the same shift as a Standby Report. You can edit or delete the existing report on the Report History tab (tap %s below).",
-  "standby_report_xor_work_report_existing_work_report": "You have an existing Work Report for this shift. You cannot add a Standby Report for the same shift as a Work Report. You can edit or delete the existing report on the Report History tab (tap %s below)."
+  "standby_report_xor_work_report_existing_work_report": "You have an existing Work Report for this shift. You cannot add a Standby Report for the same shift as a Work Report. You can edit or delete the existing report on the Report History tab (tap %s below).",
+  "stay_in_reports": "Stay in Reports",
+  "stay_in_reports_help": "If this toggle is set, the Work Report page (<span class='alert-with-icon'><span class='alert-icon'>&#xf434;</span></span> tab) does not go to Report History after you save a report."
 }
