--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -157,5 +157,7 @@
   "standby_hb_duncan_wrong_location": "Tu ubicación no está configurada para Halliburton Duncan. Defina su ubicación en la pestaña Perfil de Usuario (toque en %s en la parte inferior de la pantalla).",
   "duplicate_standby_report": "Tiene un Reporte Espera para este turno. Sólo se permite un Reporte Espera por turno. Puede editar o eliminar el reporte existente en la página Reportes de Trabajo (toque %s de abajo)",
   "standby_report_xor_work_report_existing_standby": "Tiene un Reporte Espera para este turno. No puede agregar un Reporte de Trabajo para el mismo turno que un Reporte Espera. Puede editar o eliminar el reporte existente en la página Reportes de Trabajo (toque %s de abajo).",
-  "standby_report_xor_work_report_existing_work_report": "Tiene un Reporte de Trabajo para este turno. No puede agregar un Reporte Espera para el mismo turno que un Reporte de Trabajo. Puede editar o eliminar el reporte existente en la página Reportes de Trabajo (toque %s de abajo)."
+  "standby_report_xor_work_report_existing_work_report": "Tiene un Reporte de Trabajo para este turno. No puede agregar un Reporte Espera para el mismo turno que un Reporte de Trabajo. Puede editar o eliminar el reporte existente en la página Reportes de Trabajo (toque %s de abajo).",
+  "stay_in_reports": "Permanecer en Reporte",
+  "stay_in_reports_help": "Si esta opción está activada, la página Reporte de Trabajo (pestaña <span class='alert-with-icon'><span class='alert-icon'>&#xf434;</span></span>) no pasa al Historial de Reportes después de guardar un reporte."
 }
