--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -124,6 +124,7 @@
   "submitted_comment_successfully": "Su comentario ha sido enviado. ¡Gracias!",
   "success": "Éxito",
   "could_not_read_phone_info": "No se pudo leer la marca y modelo del teléfono. En su comentario, por favor díganos qué tipo de teléfono tiene.",
+  "comment_title": "Comentarios",
   "comment": "Comentario",
   "send_comment": "Enviar Comentario",
   "spinner_app_loading": "Cargando la Aplicación",
