--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -167,5 +167,8 @@
   "show_clock": "Mostrar el Enlace de Bolsillo",
   "show_clock_help": "Muestra el reloj animado, en caso de que quiera verlo. Vuelve a tocar la pantalla para volver a traer la aplicación.",
   "error_blank_item": "El elemento del formulario '%s' está vacío.",
-  "error_report_not_found": "El informe no se encontró en la lista. No deberías ver esto. Envía un comentario desde la página de configuración (<span class='alert-with-icon'><span class='alert-icon'>&#xf20d;</span></span>) que nos indica."
+  "error_report_not_found": "El informe no se encontró en la lista. No deberías ver esto. Envía un comentario desde la página de configuración (<span class='alert-with-icon'><span class='alert-icon'>&#xf20d;</span></span>) que nos indica.",
+  "error_no_site_title": "Sitio no Encontrado",
+  "error_no_site_message": "No se encontró el sitio de trabajo '%s %s %s'. Por favor, envíe un comentario a los desarrolladores diciéndoles lo que sucedió.",
+  "off": "Descanso"
 }
