Try this update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,7 +121,7 @@
   "total_payroll_hours": "Total Pay Period Hours",
   "submitting_comment": "Submitting comment...",
   "could_not_submit_comment": "Could not submit comment at this time. Internet or server connection problem.",
-  "submitted_comment_successfully": "Your comment has been submitted. Thank you!",
+"submitted_comment_successfully": "Your comment has been submitted. Thank you!",
   "success": "Success",
   "could_not_read_phone_info": "Could not read phone make and model. In your comment, please tell us what kind of phone you have.",
   "comment_title": "Comments",
@@ -173,5 +173,9 @@
   "off": "Off",
   "alert": "Alert",
   "unable_to_sync_message": "Unable to connect to server to sync reports. Your report has been saved to your phone. Please sync later by adding another Work Report or by using the 'Sync Data' button in Settings (<span class='alert-with-icon'><span class='alert-icon'>&#xf20d;</span></span>).",
-  "sync_data": "Sync Data"
+  "sync_data": "Sync Data",
+  "sync_data_help": "Sends any reports that were saved while the app could not contact the server.",
+  "spinner_sending_reports_to_server": "Sending reports to server...",
+  "manual_sync_error": "Unable to send reports to server. Please check your phone's Internet connection and try again. If you still get an error, please contact the developers.",
+  "manual_sync_success": "Successfully sent reports to server."
 }
