--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -172,6 +172,10 @@
   "error_no_site_message": "No se encontró el sitio de trabajo '%s %s %s'. Por favor, envíe un comentario a los desarrolladores diciéndoles lo que sucedió.",
   "off": "Descanso",
   "alert": "Alerta",
-  "unable_to_sync_message": "No se puede conectar al servidor para sincronizar los informes. Tu informe se ha guardado en tu teléfono. Para sincronizar más tarde, agregue otro informe de trabajo o utilice el botón 'Sincronizar Datos' en Configuración (<span class='alert-with-icon'><span class='alert-icon'>&#xf20d;</span></span>).",
-  "sync_data": "Sincronizar Datos"
+  "unable_to_sync_message": "No se puede conectar al servidor para sincronizar los reportes. Tu reporte se ha guardado en tu teléfono. Para sincronizar más tarde, agregue otro Reporte de Trabajo o utilice el botón 'Sincronizar Datos' en la página Configuración (<span class='alert-with-icon'><span class='alert-icon'>&#xf20d;</span></span>).",
+  "sync_data": "Sincronizar Datos",
+  "sync_data_help": "Envía todos los reportes que se guardaron mientras la aplicación no pudo ponerse en contacto con el servidor.",
+  "spinner_sending_reports_to_server": "Enviar reportes al servidor...",
+  "manual_sync_error": "No se pueden enviar reportes al servidor. Comprueba la conexión a Internet de tu teléfono e inténtalo de nuevo. Si sigue recibiendo un error, póngase en contacto con los desarrolladores.",
+  "manual_sync_success": "Envió correctamente los reportes al servidor."
 }
